--- a/dialects/scf/Cargo.toml
+++ b/dialects/scf/Cargo.toml
@@ -27,4 +27,5 @@ bitvec.workspace = true
 [dev-dependencies]
 # Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 midenc-expect-test = { path = "../../tools/expect-test" }
+midenc-dialect-debuginfo = { path = "../debuginfo" }
 env_logger.workspace = true
