test(local2reg): add local2reg tests

--- a/dialects/hir/Cargo.toml
+++ b/dialects/hir/Cargo.toml
@@ -27,5 +27,6 @@ midenc-hir-transform.workspace = true
 # Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 midenc-dialect-scf.workspace = true
 midenc-expect-test = { path = "../../tools/expect-test" }
-litcheck-filecheck = "0.3.0"
+litcheck.workspace = true
+litcheck-filecheck.workspace = true
 midenc-log.workspace = true
