feat: improving compiler tracing infrastructure
* Add new logging crate to replace env_logger with more powerful log
  categorization and filtering options suitable for how heavily we emit
  traces during debugging
* Add a TraceTarget type for representing the structure we use for
  categorizing trace logging
* Add trace targets to many log statements that lacked them
* Fix a few aliasing violations surfaced during testing

--- a/hir-analysis/Cargo.toml
+++ b/hir-analysis/Cargo.toml
@@ -23,4 +23,4 @@ midenc-dialect-arith = { path = "../dialects/arith" }
 midenc-dialect-cf = { path = "../dialects/cf" }
 midenc-dialect-scf = { path = "../dialects/scf" }
 midenc-expect-test = { path = "../tools/expect-test" }
-env_logger.workspace = true
+midenc-log.workspace = true
