--- a/dialects/hir/Cargo.toml
+++ b/dialects/hir/Cargo.toml
@@ -28,4 +28,4 @@ midenc-hir-transform.workspace = true
 midenc-dialect-scf.workspace = true
 midenc-expect-test = { path = "../../tools/expect-test" }
 litcheck-filecheck = "0.3.0"
-env_logger.workspace = true
+midenc-log.workspace = true
