--- a/hir/Cargo.toml
+++ b/hir/Cargo.toml
@@ -40,4 +40,4 @@ thiserror.workspace = true
 [dev-dependencies]
 # Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 pretty_assertions = "1.0"
-env_logger.workspace = true
+midenc-log.workspace = true
