--- a/midenc/Cargo.toml
+++ b/midenc/Cargo.toml
@@ -14,6 +14,6 @@ readme.workspace = true
 edition.workspace = true
 
 [dependencies]
-env_logger.workspace = true
 human-panic = "2.0"
 midenc-driver = { workspace = true, features = ["std"] }
+midenc-log.workspace = true
