--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,8 @@ hashbrown = { version = "0.15", features = ["nightly"] }
 Inflector = "0.11"
 intrusive-collections = "0.9"
 inventory = "0.3"
+litcheck = { package = "litcheck-core", version = "0.4" }
+litcheck-filecheck = "0.4"
 log = { version = "0.4", features = ["kv"] }
 
 # Miden Dependencies
