--- a/sdk/field-repr/repr/Cargo.toml
+++ b/sdk/field-repr/repr/Cargo.toml
@@ -15,8 +15,8 @@ edition.workspace = true
 crate-type = ["rlib"]
 
 [dependencies]
-miden-field = { version = "0.10.0", path = "../../field" }
 miden-field-repr-derive = { path = "../derive", version = "0.10.0" }
+miden-field.workspace = true
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 miden-core.workspace = true
