--- a/sdk/field-repr/tests/Cargo.toml
+++ b/sdk/field-repr/tests/Cargo.toml
@@ -13,9 +13,9 @@ edition.workspace = true
 publish = false
 
 [dependencies]
-miden-field = { path = "../../field", version = "0.10.0" }
 miden-field-repr = { path = "../repr", version = "0.10.0" }
 miden-core.workspace = true
+miden-field.workspace = true
 
 [dev-dependencies]
 # NOTE: Use local paths for dev-only dependency to avoid relying on crates.io during packaging
