--- a/sdk/sdk/Cargo.toml
+++ b/sdk/sdk/Cargo.toml
@@ -22,6 +22,7 @@ miden-base-macros = { version = "0.10.0", path = "../base-macros" }
 miden-base-sys = { version = "0.10.0", path = "../base-sys" }
 miden-field-repr = { version = "0.10.0", path = "../field-repr/repr" }
 miden-field = { version = "0.10.0", path = "../field" }
+miden-field.workspace = true
 wit-bindgen = { version = "0.46", default-features = false, features = ["macros"] }
 
 [features]
