fix: link name for `falcon512pro::verify` MASM procedure

--- a/hir-symbol/src/symbols.toml
+++ b/hir-symbol/src/symbols.toml
@@ -121,7 +121,7 @@ mem = {}
 note = {}
 output_note = {}
 faucet = {}
-falcon512_rpo = {}
+falcon512rpo = {}
 tx = {}
 rpo256 = {}
 collections = {}
