--- a/dialects/hir/Cargo.toml
+++ b/dialects/hir/Cargo.toml
@@ -25,8 +25,8 @@ midenc-hir-transform.workspace = true
 
 [dev-dependencies]
 # Use local paths for dev-only dependency to avoid relying on crates.io during packaging
-midenc-dialect-scf.workspace = true
+midenc-dialect-scf = { path = "../scf" }
 midenc-expect-test = { path = "../../tools/expect-test" }
 litcheck.workspace = true
 litcheck-filecheck.workspace = true
-midenc-log.workspace = true
+midenc-log = { path = "../../midenc-log" }
