chore: fix `midenc-log` in `[dev-dependencies]` preventing publishing

--- a/codegen/masm/Cargo.toml
+++ b/codegen/masm/Cargo.toml
@@ -39,7 +39,7 @@ smallvec.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
-# Use local paths for dev-only dependency to avoid relying on crates.io during packaging
+# NOTE: Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 midenc-expect-test = { path = "../../tools/expect-test" }
 proptest.workspace = true
 midenc-log = { path = "../../midenc-log" }
