--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -26,5 +26,5 @@ wit-bindgen-core = "0.46"
 wit-bindgen-rust = { version = "0.46", default-features = false }
 
 [dev-dependencies]
-# Use local paths for dev-only dependency to avoid relying on crates.io during packaging
+# NOTE: Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 miden-protocol = { workspace = true, features = ["std"] }
