--- a/hir-analysis/Cargo.toml
+++ b/hir-analysis/Cargo.toml
@@ -18,6 +18,7 @@ log.workspace = true
 midenc-hir.workspace = true
 
 [dev-dependencies]
+# NOTE: Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 midenc-dialect-hir = { path = "../dialects/hir" }
 midenc-dialect-arith = { path = "../dialects/arith" }
 midenc-dialect-cf = { path = "../dialects/cf" }
