--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -42,6 +42,6 @@ sha2 = "0.10"
 walkdir = "2.5.0"
 
 [dev-dependencies]
-# Use local paths for dev-only dependency to avoid relying on crates.io during packaging
+# NOTE: Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 blake3 = "1.5"
 concat-idents = "1.1"
