chore: run the `release` CI job after the successful `publish` CI job
After merging a release PR, until the release is actually “published”
(registry/tag), `release-pr` is expected (by design) to consider the
bumped-but-unpublished state and may generate a new PR (typically to
refresh changelog content). Running `release-pr` in parallel
with (or immediately after) `release` can produce the duplicate PRs

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,7 +133,12 @@ jobs:
   release:
     name: prepare the next release
     runs-on: ubuntu-latest
-    if: ${{ github.repository_owner == '0xMiden' }}
+    needs: publish
+    # Only prepare the next release if we didn't just create a release.
+    # When a release PR is merged, the `publish` job will create tags/releases and publish to crates.io.
+    # Running `release-pr` in the same workflow run before publishing completes can create a duplicate
+    # release PR for the same version bump.
+    if: ${{ github.repository_owner == '0xMiden' && needs.publish.result == 'success' && needs.publish.outputs.releases_created != 'true' }}
     permissions:
       contents: write
       pull-requests: write
