fix: `miden-field-repr` build for the release checks CI job

--- a/sdk/field-repr/repr/Cargo.toml
+++ b/sdk/field-repr/repr/Cargo.toml
@@ -23,3 +23,6 @@ miden-core.workspace = true
 
 [features]
 default = []
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ["cfg(miden)"] }
