--- a/codegen/masm/Cargo.toml
+++ b/codegen/masm/Cargo.toml
@@ -32,6 +32,7 @@ midenc-dialect-cf.workspace = true
 midenc-dialect-hir.workspace = true
 midenc-dialect-scf.workspace = true
 midenc-dialect-ub.workspace = true
+midenc-dialect-wasm.workspace = true
 midenc-session.workspace = true
 petgraph.workspace = true
 serde.workspace = true
