test: cover `TrailingData` rejection in `TryFrom<&[Felt]>`

--- a/sdk/base-macros/Cargo.toml
+++ b/sdk/base-macros/Cargo.toml
@@ -28,3 +28,5 @@ wit-bindgen-rust = { version = "0.46", default-features = false }
 [dev-dependencies]
 # NOTE: Use local paths for dev-only dependency to avoid relying on crates.io during packaging
 miden-protocol = { workspace = true, features = ["std"] }
+miden-field = { version = "0.10.0", path = "../field" }
+miden-field-repr = { version = "0.10.0", path = "../field-repr/repr" }
